...
                                    android:id="@+id/text_goal_weight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/text_primary"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-medium"
                                    tools:text="150.0" />

                                <TextView
                                    android:id="@+id/text_goal_unit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/text_secondary"
...
